2006-06-08 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j43-UNSTABLE
  
 FIX: PHP5 fixes change $HTTP_ to $_
	classes/Mail/htmlMimeMail.php
	do_command.php

 * CSS -> 1.6
	progress_uploading.php
	multi_create_user.php
	publish_xp.php
	save_photos.php
	publish_xp_docs.php
	new_password.php

 * HTML Fixes

 * More use of gTranslate

 * General Cleanup

2006-06-07 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j42-UNSTABLE

 * More use of gTranslate

 * CSS -> 1.6
	rearrange.php
	setup/write.inc
	
 * HTML Fixes

 * Rewrite Fix in setup/init.php

 * General Cleanup
	
2006-06-07 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j41-UNSTABLE

 * Typo in Varname.

2006-06-06 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j40-UNSTABLE

 * HTML/CSS Fixes

2006-06-06 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j39-UNSTABLE

 * HTML Fixes in:
	create_user.php
	setup/diagnostics.php
	html/userData.inc

 * CSS -> 1.6
	setup/login.inc
	setup/check_versions.php
	setup/index.php
	setup/session_test.php
	setup/check_mail.php

 * Added gReset()

 * General cleanup and fixes, more use of gTranslate()

2006-06-03 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j38-UNSTABLE

 * General cleanup and fixes, more use of gTranslate()

 * CSS -> 1.6
	setup/check_mail.php

2006-06-03 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j37-UNSTABLE

 ** API CHANGE **

 Changed $attrs = '' to $attrs = array() in:

 - classes/Album.php
	getPreviewTag()
	getThumbnailTag()
	getThumbnailTagById()
	getHighlightAsThumbnailTag()
	getHighlightTag()
	getThumbnailTagById()
	getHighlightAsThumbnailTag()
	getHighlightTag()
	
 - classes/AlbumItem.php
	getPreviewTag()
	getThumbnailTag()
	getHighlightTag()
	getPhotoTag()
	
 - classes/Image.php
	getTag()

Affects:
	rearrange.php
	view_album.php
	lib/content.php
	layout/navmicro.inc
	rss.php
	albums.php
	view_photo.php
 
2006-06-03 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j36-UNSTABLE

 * HTML fixes in:
	- move_photo.php
	- administer_startpage.php
	- resize_photo.php
	- lib/setup.php
	- lib/Form.php
	