@@ -61,32 +61,38 @@ if (!$GALLERY_EMBEDDED_INSIDE) {
 <html> 
 <head>
   <title><?php echo $gallery->app->galleryTitle ?> :: <?php echo $gallery->album->fields["title"] . "::" . gTranslate('core', "Poll Results") ?></title>
-  <?php common_header(); ?>
-  <style type="text/css">
-<?php
-// the link colors have to be done here to override the style sheet 
-if ($gallery->album->fields["linkcolor"]) {
+  <?php common_header();
+
+if( ! empty($gallery->album->fields["linkcolor"]) ||
+        !empty($gallery->album->fields["bgcolor"]) ||
+        !empty($gallery->album->fields["textcolor"])) {
+
+        echo "\n<style type=\"text/css\">";
+        // the link colors have to be done here to override the style sheet
+        if ($gallery->album->fields["linkcolor"]) {
+                echo "\n  a:link, a:visited, a:active {";
+                echo "\n        color: ".$gallery->album->fields['linkcolor'] ."; }";
+                echo "\n  a:hover { color: #ff6600; }";
+
+        }
+        if ($gallery->album->fields["bgcolor"]) {
+                echo "body { background-color:".$gallery->album->fields['bgcolor']."; }";
+        }
+        if (isset($gallery->album->fields['background']) && $gallery->album->fields['background']) {
+                echo "body { background-image:url(".$gallery->album->fields['background']."); } ";
+        }
+        if ($gallery->album->fields["textcolor"]) {
+                echo "body, tf {color:".$gallery->album->fields['textcolor']."; }";
+                echo ".head {color:".$gallery->album->fields['textcolor']."; }";
+                echo ".headbox {background-color:".$gallery->album->fields['bgcolor']."; }";
+        }
+
+        echo "\n  </style>";
+        }
 ?>
-    A:link, A:visited, A:active
-      { color: <?php echo $gallery->album->fields[linkcolor] ?>; }
-    A:hover
-      { color: #ff6600; }
-<?php }
-if ($gallery->album->fields["bgcolor"]) {
-	echo "BODY { background-color:".$gallery->album->fields[bgcolor]."; }";
-}
-if ($gallery->album->fields["background"]) {
-	echo "BODY { background-image:url(".$gallery->album->fields[background]."); } ";
-}
-if ($gallery->album->fields["textcolor"]) {
-	echo "BODY, TD {color:".$gallery->album->fields[textcolor]."; }";
-	echo ".head {color:".$gallery->album->fields[textcolor]."; }";
-	echo ".headbox {background-color:".$gallery->album->fields[bgcolor]."; }";
-}
-?>
-  </style>
+
 </head>
-<body dir="<?php echo $gallery->direction ?>">
+<body>
 <?php } 
 
 includeHtmlWrap("album.header");
@@ -107,71 +113,66 @@ $navigator["spread"] = 5;
 $navigator["bordercolor"] = $bordercolor;
 includeLayout('navigator.inc');
 
-?>
+$num_rows = $gallery->album->numPhotos($gallery->user->canWriteToAlbum($gallery->album));
+list($buf, $results) = showResultsGraph($num_rows);
+$ranks = array_keys($results);
 
-<!-- image grid table -->
+echo "<br>";
+echo $buf;
+		
+$i = 0;
+$numPhotos = sizeof($ranks);
+
+$resultTable = new galleryTable();
+$resultTable->setAttrs(array(
+	'class' => 'g-vatable'
+));
+$resultTable->setColumnCount($cols);
+
+while ($i < $numPhotos) {
+    $content = '';
+
+    $index = $gallery->album->getIndexByVotingId($ranks[$i]);
+    if ($index < 0) {
+	$i++;
+	continue;
+    }
+	
+    if ($gallery->album->isAlbum($index)) {
+	$albumName = $gallery->album->getAlbumName($index);
+	$album = $gallery->album->getSubAlbum($index);
+	$content = sprintf(gTranslate('core', "Album: %s"),$album->fields['title']) . "<br>";
+    }
+    else {
+	$content = $gallery->album->getCaption($index) . "<br>";
+   }
+
+    $content .= showResults($ranks[$i]);
+
+    $resultTable ->addElement(array(
+	'content' => $content,
+	'cellArgs' => array('class' => 'g-vathumb-cell')
+    ));
+
+    $i++;
+}
+
+if (!empty($resultTable->elements)) {
+?>
 <br>
+<p class="g-vote-box">
+<?php echo gTranslate('core', "Results Breakdown") ?>
+</p>
 <?php
-	$num_rows=$gallery->album->numPhotos($gallery->user->canWriteToAlbum($gallery->album));
-	list($buf, $results)=showResultsGraph($num_rows);
-	$ranks=array_keys($results);
-	print $buf;
-		?>
-			<p>
-			    <span class="pollresults"><?php echo gTranslate('core', "Results Breakdown") ?></span>
-			<table width="<?php print $fullWidth?>" border="0" cellspacing="0" cellpadding="7">
-			<?php
-		
-			$rowStart = 0;
-			$i = 0;
-			$numPhotos = sizeof($ranks);
-		       	$result = false;
-		
-			while ($i < $numPhotos) {
-				/* Do the inline_albumthumb header row */
-				echo("<tr>");
-				$i = $rowStart;
-				$j = 1;
-		
-				while ($j <= $cols && $i < $numPhotos) {
-					echo("<td>");
+    echo $resultTable->render();
+}
 
-					$index = $gallery->album->getIndexByVotingId($ranks[$i]);
-					if ($index < 0) {
-						$i++;
-						continue;
-					}
-					$result=true;
-					if ($gallery->album->isAlbum($index)) {
-						$albumName = $gallery->album->getAlbumName($index);
-						$album = $gallery->album->getSubAlbum($index);
-						print sprintf(gTranslate('core', "Album: %s"),$album->fields['title'])."<Br>";
-					} else {
-						print $gallery->album->getCaption($index)."<br>";
-					}
+$validation_file = basename(__FILE__);
+includeHtmlWrap("general.footer");
 
-					print showResults($ranks[$i]);
-					echo("</td>");
-					$j++; 
-					$i++;
-				}
-				echo("</tr>");
-		
-				$rowStart = $i;
-			}
-			if (!$result) {
-				print gTranslate('core', "No votes so far.");
-			}
-		?>
-		
-		</table>
-		
-	<?php
-	$validation_file = basename(__FILE__);
-	includeHtmlWrap("general.footer");
-?>
 
-<?php if (!$GALLERY_EMBEDDED_INSIDE) { ?>
+if (!$GALLERY_EMBEDDED_INSIDE) { ?>
 </body>
 </html>
-<?php } ?>
+<?php }
+?>
