@@ -1,3 +1,11 @@
+2006-06-09 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j44-UNSTABLE
+
+ * Error nicify in class/Album.php
+
+ * css-> 1.6 / HTML fixes
+	poll_results.php
+	lib/voting.php
+
 2006-06-08 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j43-UNSTABLE
   
  FIX: PHP5 fixes change $HTTP_ to $_
